# pingcap-rust-talent-plan

./: README.md
project1/: Cargo.toml
project1/src/: lib.rs
project1/tests/: tests.rs
project2/: Cargo.toml
project2/src/: lib.rs
project2/tests/: tests.rs
