[package]
name = "kvs"
version = "0.1.0"
authors = ["Sighery"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
test = false

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
structopt = "0.2.18"
failure = "0.1.5"
failure_derive = "0.1.5"
